# Audio

app/: README.md  audio.jks  build.gradle
app/debug/: app-debug.apk
app/release/: app-release.apk
app/src/androidTest/java/com/gusi/audio/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  speech_NS.cpp  speex.cpp  speex.h  webrtc.cpp  webrtc.h
app/src/main/cpp/speex/: arch.h  buffer.c  fftwrap.c  fixed_arm4.h  fixed_arm5e.h  fixed_bfin.h  fixed_debug.h  jitter.c  mdf.c  preprocess.c  resample.c  scal.c  testdenoise.c  testecho.c  testjitter.c  testresample.c
app/src/main/java/com/gusi/audio/: App.java  Audio2.java  AudioEffectEntity.java  MainActivity.java
app/src/main/java/com/gusi/audio/speex/: Speex.java  SpeexActivity.java  SpeexAudio.java
app/src/main/java/com/gusi/audio/utils/: CloseUtils.java  PCM.java  PcmToWavUtil.java  ToastUtils.java
app/src/main/java/com/gusi/audio/webrtc/: Webrtc.java  WebrtcActivity.java  WebrtcAudio.java
app/src/main/res/layout/: activity_main.xml  activity_speex.xml  activity_webrtc.xml
app/src/test/java/com/gusi/audio/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
webrtc/: google-webrtc-1.0.26405.pom
